--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,14 @@
-
 <section class="container mt-5 d-flex flex-wrap ">
     {{#each products}}
     <div class="card m-3 p-2" style="width: 18rem;">
-        <img src="{{this.imageUrl}}" class="card-img-top" alt="{{this.title}}" height="300" >
+        <img src="/product-images/{{this.__id}}.jpg" class="card-img-top" alt="{{this.title}}" height="300" >
         <div class="card-body">
             <h5 class="card-title">{{this.title}}</h5>
             <p class="card-text">{{this.description}}</p>
+            <p class="card-text"><span>&#8377;</span>{{this.price}}</p>
             <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
     </div>
     {{/each}}
 </section>
+╣
