--- a/views/partials/admin-nav.hbs
+++ b/views/partials/admin-nav.hbs
@@ -1,4 +1,4 @@
-<header>
+<header style="position: sticky; top:0; z-index: 3;">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="#" class="navbar-brand fs-5 fw-bold">Admin Panel</a>
