--- a/views/partials/user-nav.hbs
+++ b/views/partials/user-nav.hbs
@@ -1,6 +1,6 @@
-<header>
+<header style="position: sticky; top:0; z-index: 3;">
     <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <div class=" d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="#" class="navbar-brand fs-5 fw-bold">Shopping Cart</a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto ms-4 mb-2 justify-content-center mb-md-0">
@@ -9,23 +9,21 @@
                 <li><a href="#" class="nav-link px-2 link-body-emphasis">Orders</a></li>
             </ul>
 
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-            </form>
-
-            <div class="dropdown text-end">
-                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-                </a>
-                <ul class="dropdown-menu text-small">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    {{#if user}}
+                        {{user.name}}
+                    {{else}}
+                        Account
+                    {{/if}}
+                </button>
+                <ul class="dropdown-menu">
+                    {{#if user}}
+                        <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                    {{else}}
+                        <li><a class="dropdown-item" href="/login">Login</a></li>
+                    {{/if}}
                 </ul>
             </div>
         </div>
