Edit & Delete in AddProduct

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -7,6 +7,10 @@
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form action="/login" method="post">
+
+          {{#if loginErr}}
+            <p class="error">{{loginErr}}</p>
+          {{/if}}
           
           <div class="form-outline mb-4">
             <label class="form-label" for="form3Example3">Email address</label>
