--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -15,7 +15,7 @@
 
             <div class="form-group m-3">
                 <label for="description">Description</label>
-                <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
+                <input type="text" class="form-control" id="description" name="description" required>
             </div>
 
             <div class="form-group m-3">
