--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -10,6 +10,7 @@
                     <th scope="col">Title</th>
                     <th scope="col">Category</th>
                     <th scope="col">Description</th>
+                    <th scope="col">Price</th>
                     <th scope="col">Image</th>
                 </tr>
             </thead>
@@ -20,8 +21,19 @@
                     <td>{{this.title}}</td>
                     <td>{{this.category}}</td>
                     <td>{{this.description}}</td>
+                    <td>{{this.price}}</td>
                     <td>
                         <img src="/product-images/{{this._id}}.jpg" alt="{{this.title}}" style="width: 50; height: 50px;">
+                    </td>
+                    <td><a href="/admin/edit-product?id={{this._id}}" class="btn btn-primary">Edit</a></td>
+                    <td>
+                        <a 
+                            href="/admin/delete-product?id={{this._id}}" 
+                            class="btn btn-danger"
+                            onclick="return confirm('Are you sure you want to delete this {{this.title}} product?')"
+                        >
+                            Delete
+                        </a>
                     </td>
                 </tr>
                 {{/each}}
