--- a/views/partials/user-nav.hbs
+++ b/views/partials/user-nav.hbs
@@ -5,8 +5,10 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto ms-4 mb-2 justify-content-center mb-md-0">
                 <li><a href="#" class="nav-link px-2 link-secondary">Products</a></li>
-                <li><a href="#" class="nav-link px-2 link-body-emphasis">Cart</a></li>
-                <li><a href="#" class="nav-link px-2 link-body-emphasis">Orders</a></li>
+                <li><a href="/cart" class="nav-link px-2 link-body-emphasis">Cart</a></li>
+                {{#if user}}
+                    <li><a href="#" class="nav-link px-2 link-body-emphasis">Orders</a></li>
+                {{/if}}
             </ul>
 
             <div class="dropdown">
