--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -11,7 +11,7 @@
             <h5 class="card-title">{{this.title}}</h5>
             <p class="card-text">{{this.description}}</p>
             <p class="fw-bolder "><span>&#8377;</span>{{ this.price }}</p>
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a href="/add-to-cart?id={{this._id}}" class="btn btn-primary">Add to cart</a>
         </div>
     </div>
     {{/each}}
