--- a/views/partials/user-nav.hbs
+++ b/views/partials/user-nav.hbs
@@ -1,11 +1,15 @@
-<header style="position: sticky; top:0; z-index: 3;">
+<header>
     <div class="container">
         <div class=" d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="#" class="navbar-brand fs-5 fw-bold">Shopping Cart</a>
+            <a href="/" class="navbar-brand fs-5 fw-bold">Shopping Cart</a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto ms-4 mb-2 justify-content-center mb-md-0">
                 <li><a href="#" class="nav-link px-2 link-secondary">Products</a></li>
-                <li><a href="/cart" class="nav-link px-2 link-body-emphasis">Cart</a></li>
+                <li>
+                    <a href="/cart" class="nav-link px-2 link-body-emphasis position:relative me-3">
+                        Cart<span class="position-absolute rounded-circle  badge bg-success" id="cart-counts">{{cartCounts}}</span>
+                    </a>
+                </li>
                 {{#if user}}
                     <li><a href="#" class="nav-link px-2 link-body-emphasis">Orders</a></li>
                 {{/if}}
