--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -11,8 +11,10 @@
             <h5 class="card-title">{{this.title}}</h5>
             <p class="card-text">{{this.description}}</p>
             <p class="fw-bolder "><span>&#8377;</span>{{ this.price }}</p>
-            <a href="/add-to-cart?id={{this._id}}" class="btn btn-primary">Add to cart</a>
+            <button onclick="addToCart('{{this._id}}')" class="btn btn-primary">Add to Cart</button>
         </div>
     </div>
     {{/each}}
 </section>
+
+
