--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -6,10 +6,10 @@
           class="img-fluid" alt="Sample image">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <form action="/login" method="post">
+        <form action="/admin/login" method="post">
 
-          {{#if userLoginErr}}
-            <p class="error">{{userLoginErr}}</p>
+          {{#if adminLoginErr}}
+            <p class="error">{{adminLoginErr}}</p>
           {{/if}}
           
           <div class="form-outline mb-4">
@@ -27,8 +27,6 @@
           <div class="text-center text-lg-start mt-4 pt-2">
             <button type="submit" class="btn btn-primary btn-lg"
               style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? 
-              <a href="/signup" class="link-danger">Register</a></p>
           </div>
 
         </form>
