--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -3,41 +3,45 @@
         <div class="d-flex justify-content-end m-4">
             <a href="/admin/add-product" class="btn btn-success">Add Product</a>
         </div>
-        <table class="table mt-5">
-            <thead>
-                <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Image</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each products}}
-                <tr>
-                    <th scope="row">{{@index}}</th>
-                    <td>{{this.title}}</td>
-                    <td>{{this.category}}</td>
-                    <td>{{this.description}}</td>
-                    <td>{{this.price}}</td>
-                    <td>
-                        <img src="/product-images/{{this._id}}.jpg" alt="{{this.title}}" style="width: 50; height: 50px;">
-                    </td>
-                    <td><a href="/admin/edit-product?id={{this._id}}" class="btn btn-primary">Edit</a></td>
-                    <td>
-                        <a 
-                            href="/admin/delete-product?id={{this._id}}" 
-                            class="btn btn-danger"
-                            onclick="return confirm('Are you sure you want to delete this {{this.title}} product?')"
-                        >
-                            Delete
-                        </a>
-                    </td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
+        <div class="table-responsive border border-dark p-3">
+            <table class="table table-striped mt-5 align-middle" style="width:100%" id="myTable">
+                <thead>
+                    <tr>
+                        <th scope="col">No</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Price</th>
+                        <th>Image</th>
+                        <th scope="col">Option</th>
+                        <th scope="col">Option</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each products}}
+                    <tr>
+                        <td>{{inc @index}}</td>
+                        <td>{{this.title}}</td>
+                        <td>{{this.category}}</td>
+                        <td>{{this.description}}</td>
+                        <td>{{this.price}}</td>
+                        <td>
+                            <img src="/product-images/{{this._id}}.jpg" alt="{{this.title}}"
+                                style="width: 50; height: 50px;">
+                        </td>
+                        <td>
+                            <a href="/admin/edit-product?id={{this._id}}" class="btn btn-primary m-2">Edit</a>
+                        </td>
+                        <td>
+                            <a href="/admin/delete-product?id={{this._id}}" class="btn btn-danger"
+                                onclick="return confirm('Are you sure you want to delete this {{this.title}} product?')">
+                                Delete
+                            </a>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
 </section>
