--- a/views/partials/admin-nav.hbs
+++ b/views/partials/admin-nav.hbs
@@ -1,33 +1,13 @@
-<header style="position: sticky; top:0; z-index: 3;">
-    <div class="container">
+<header>
+    <div class="container mt-2">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="#" class="navbar-brand fs-5 fw-bold">Admin Panel</a>
+            <a href="/admin" class="navbar-brand fs-5 fw-bold">Admin Panel</a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto ms-4 mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-body-emphasis">All Products</a></li>
-                <li><a href="#" class="nav-link px-2 link-body-emphasis">All Users</a></li>
-                <li><a href="#" class="nav-link px-2 link-body-emphasis">All Orders</a></li>
+                <li><a href="/admin/all-products" class="nav-link px-2 link-body-emphasis">All Products</a></li>
+                <li><a href="/admin/all-users" class="nav-link px-2 link-body-emphasis">All Users</a></li>
+                <li><a href="/admin/all-orders" class="nav-link px-2 link-body-emphasis">All Orders</a></li>
             </ul>
-
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-            </form>
-
-            <div class="dropdown text-end">
-                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-                </a>
-                <ul class="dropdown-menu text-small">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
-            </div>
         </div>
     </div>
 </header>
