--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -1,12 +1,12 @@
 <section>
-  <div class="container ">
+  <div class="container">
     <table class="table mt-5">
       <thead>
         <tr>
           <th scope="col">Item</th>
           <th scope="col">Title</th>
-          <th scope="col">Price</th>
           <th scope="col">Quantity</th>
+          <th scope="col">Price</th>
         </tr>
       </thead>
 
@@ -17,18 +17,24 @@
             <img src="/product-images/{{this.product._id}}.jpg" alt="" style="width: 70px; height:70px;">
           </td>
           <td scope="col">{{this.product.title}}</td>
-          <td scope="col">{{this.product.price}}</td>
           <td scope="col">
-            <button class="cart-item-count mr-3" onclick="handleClick('{{this._id}}','{{this.product._id}}',-1)">-</button>
-            <button class="item-quantity">{{this.quantity}}</button>
-            <button class="cart-item-count ml-3" onclick="handleClick('{{this._id}}','{{this.product._id}}',1)">+</button>
+            <button class="cart-item-count mr-3" onclick="handleClick('{{this._id}}','{{this.product._id}}','{{../user._id}}',-1)">-</button>
+            <span id="{{this.product._id}}">{{this.quantity}}</span>
+            <button class="cart-item-count ml-3" onclick="handleClick('{{this._id}}','{{this.product._id}}','{{../user._id}}',1)">+</button>
           </td>
-          <td><a href="" class="btn btn-danger">Remove</a></td>
+          <td scope="col">{{this.product.price}}</td>
+          <td><button onclick="handleRemove('{{this._id}}','{{this.product._id}}')" class="btn btn-danger">Remove</button></td>
         </tr>
       {{/each}}
       </tbody>
-      
     </table>
+    <div class="d-flex flex-column align-items-center align-items-md-end">
+
+      <h3 class="fw-medium">Total: <span id="total">{{total}}</span></h3>
+      <a href="/place-order"  class="btn btn-success mt-3 px-5 fw-semibold">Place Order</a>
+      <h3 class="hidden"></h3>
+    </div>
   </div>
 </section>
+
 
