--- a/views/admin/all-products.hbs
+++ b/views/admin/all-products.hbs
@@ -1,12 +1,12 @@
 <section class="container mt-5 d-flex flex-wrap ">
     {{#each products}}
-    <div class="card m-3 p-2" style="width: 18rem; height:25rem;     ">
+    <div class="card m-3 p-2" style="width: 18rem; height:22rem;">
         <img style="width: fit-content; height: 150px;" src="/product-images/{{this._id}}.jpg"
             class="card-img-top mx-auto" alt="{{this.title}}">
-        <div class="card-body">
+        <div class="card-body p-2">
             <h5 class="card-title">{{this.title}}</h5>
-            <p class="card-text" style="min-height:100px">{{this.description}}</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <p class="card-text" style="max-height:5rem">{{this.description}}</p>
+            <div class="d-flex justify-content-between align-items-end">
                 <p class="fw-bolder "><span>&#8377;</span>{{this.price}}</p>
                 <a href="/admin/edit-product?id={{this._id}}"  class="btn">
                     <span class="material-symbols-outlined">
