--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -15,7 +15,7 @@
 
             <div class="form-group m-3">
                 <label for="description">Description</label>
-                <input type="text" class="form-control" id="description" name="description" value="{{product.description}}" >
+                <input type="text" class="form-control" id="description" name="description" maxlength="100" value="{{product.description}}" >
             </div>
 
             <div class="form-group m-3">
